# fitness-overlay-v1

./: .gitignore  Cargo.toml  FEATURES.md  README.md  build.rs
docs/: SPEC-customizable-overlay-layouts.md
src/: bundled.rs  cli.rs  compose.rs  config.rs  fit.rs  layout.rs  lib.rs  main.rs  preview.rs  theme.rs  video.rs
src/gui/: app.rs  mod.rs
src/render/: map.rs  mod.rs  text.rs
