[package]
name = "fitoverlay"
version = "0.2.0"
edition = "2021"
description = "Burn Garmin FIT activity HUDs onto Insta360 video (CLI + desktop editor)"
license = "MIT"

[lib]
name = "fitoverlay"
path = "src/lib.rs"

[[bin]]
name = "fitnessoverlay"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
eframe = { version = "0.31.1", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.31.1"
fitparser = "0.11.0"
rfd = "0.15.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny-skia = "0.12.0"
